--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
                     <li>
                         <a [routerLink]="['/cart']">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: cart"></span>
-
+                            {{user?.name}}
                         </a>
                     </li>
                     <li>
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a (click)="logout()">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: sign-out"></span>
                         </a>
                     </li>
