--- a/src/app/pages/accounts/login-page/login-page.component.html
+++ b/src/app/pages/accounts/login-page/login-page.component.html
@@ -27,7 +27,8 @@
                 class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-bottom">Quero me
                 Cadastrar</a>
             <br>
-            <a href="/reset-password" class="uk-button uk-button-link">Esqueci minha senha</a>
+            <a [routerLink]="['/reset-password']" href="/reset-password" class="uk-button uk-button-link">Esqueci minha
+                senha</a>
         </p>
     </div>
 </div>
